--- a/src/app/views/mainPage/index.njk
+++ b/src/app/views/mainPage/index.njk
@@ -97,23 +97,7 @@
           <li><img src="img/frota5.jpeg" /></li>
         </ul>
       </div>
-      <!-- <div class ="container  " id="formulario">
-            <form>
-                <div class="form-group">
-                  <label for="exampleInputEmail1">Email</label>
-                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-                </div>
-                <div class="form-group">
-                  <label for="form-text">Nome</label>
-                  <input type="text" class="form-control" id="name" placeholder="Nome">
-                </div>
-                <div class="form-group">
-                    <label for="form-text">Mensagem</label>
-                    <textarea type="text" class="form-control" id="msg" placeholder="Diga o que deseja"></textarea>
-                  </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
-              </form>
-        </div> -->
+      {% include "../mail/mailform.njk" %}
       <div class="social">
         <a href=" http://api.whatsapp.com/send?1=pt_BR&phone=5521964791973"
           ><img src="img/whatsapp.png"
